--- a/.env
+++ b/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=pk1l4ihepirw9fob.cbetxkdyhwsb.us-east-1.rds.amazonaws.com	
 DB_PORT=3306
-DB_DATABASE=paises
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=nsq0sawgkta09uyd
+DB_USERNAME=o95omox277xhkai3
+DB_PASSWORD=rm4kczimjo4jihrr
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
